--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
     "service_worke": ["background.js"]
   },
   "permissions": [
-    "tabs","activeTab","storage", "https://twitter.com"
+    "tabs","activeTab","storage"
     ],
   "content_scripts": [
     {
@@ -17,18 +17,9 @@
   ],
   "action": {
     "default_popup": "popup.html",
-    "default_icon": {
-      "16": "/images/get_started16.png",
-      "32": "/images/get_started32.png",
-      "48": "/images/get_started48.png",
-      "128": "/images/get_started128.png"
-    }
+    "default_icon": "/images/twitter_highlighter.png"
   },
   "icons": {
-    "16": "/images/get_started16.png",
-    "32": "/images/get_started32.png",
-    "48": "/images/get_started48.png",
-    "128": "/images/get_started128.png"
-  },
-  "options_page": "options.html"
+    "128": "/images/twitter_highlighter.png"
+  }
 }
